Start making this a more full blown install.

--- a/setup/git-master-dev/install_dev.conf
+++ b/setup/git-master-dev/install_dev.conf
@@ -17,8 +17,6 @@ $apps = array(
 	'kronolith',
 	'mnemo',
 	'nag',
-	// passwd - not part of webmail bundle
-	'passwd',
 	'timeobjects',
 	'trean',
 	'turba',
@@ -31,5 +29,5 @@ $horde_git = '/horde/src';
 $web_dir = '/var/www/html/horde';
 
 // The group name/mode to use for the '/horde/static' directory
-$static_group = 'nobody';
+$static_group = 'www-data';
 $static_mode = 0775;
