--- a/setup/git-master-dev/Vagrantfile
+++ b/setup/git-master-dev/Vagrantfile
@@ -5,7 +5,8 @@ VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "ubuntu/trusty64"
-  config.vm.network "forwarded_port", guest: 80, host: 8080
+  #config.vm.network "forwarded_port", guest: 80, host: 8080
+  config.vm.network "public_network", ip: "192.168.1.51"
   config.vm.provision :shell, path: "../../shared/bootstrap.sh"
   config.vm.provision :shell, path: "horde.sh"
 end
