--- a/setup/pear-horde-5.2/Vagrantfile
+++ b/setup/pear-horde-5.2/Vagrantfile
@@ -7,5 +7,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.network "forwarded_port", guest: 80, host: 8080
   config.vm.provision :shell, path: "../../shared/config.sh"
   config.vm.provision :shell, path: "../../shared/bootstrap.sh"
+  config.vm.provision :shell, path: "../../shared/dovecot.sh"
+  config.vm.provision :shell, path: "../../sharedpostfix_local.sh"
+
   config.vm.provision :shell, path: "horde.sh"
 end
