Add working cyrus installation option.
Still need to enable kolab on the Horde side by default.

--- a/setup/git-master-cyrus/Vagrantfile
+++ b/setup/git-master-cyrus/Vagrantfile
@@ -10,10 +10,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.provision :shell, path: "../../shared/config.sh"
   config.vm.provision :shell, path: "dev_config.sh"
   config.vm.provision :shell, path: "../../shared/bootstrap.sh"
-  config.vm.provision :shell, path: "../../shared/users.sh"
   config.vm.provision :shell, path: "../../shared/mysql.sh"
-  config.vm.provision :shell, path: "../../shared/dovecot.sh"
   config.vm.provision :shell, path: "../../shared/postfix_local.sh"
+  config.vm.provision :shell, path: "../../shared/cyrus.sh"
+  config.vm.provision :shell, path: "../../shared/cyrus_users.sh"
 
   config.vm.provision :shell, path: "horde.sh"
 end
