--- a/setup/git-master-cyrus/Vagrantfile
+++ b/setup/git-master-cyrus/Vagrantfile
@@ -5,8 +5,8 @@ VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "ubuntu/trusty64"
-  config.vm.network "forwarded_port", guest: 80, host: 8080
-  #config.vm.network "public_network", ip: "192.168.1.51"
+  #config.vm.network "forwarded_port", guest: 80, host: 8080
+  config.vm.network "public_network", ip: "192.168.1.51"
   config.vm.provision :shell, path: "../../shared/config.sh"
   config.vm.provision :shell, path: "dev_config.sh"
   config.vm.provision :shell, path: "../../shared/bootstrap.sh"
