--- a/setup/pear-horde-5.2/Vagrantfile
+++ b/setup/pear-horde-5.2/Vagrantfile
@@ -11,6 +11,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.provision :shell, path: "../../shared/mysql.sh"
   config.vm.provision :shell, path: "../../shared/dovecot.sh"
   config.vm.provision :shell, path: "../../shared/postfix_local.sh"
-
+  config.vm.provision :shell, path: "../../shared/procmail.sh"
+  config.vm.provision :shell, path: "../../shared/vsftpd.sh"
   config.vm.provision :shell, path: "horde.sh"
 end
