--- a/setup/pear-horde-mariadb-5.2/Vagrantfile
+++ b/setup/pear-horde-mariadb-5.2/Vagrantfile
@@ -7,6 +7,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.network "forwarded_port", guest: 80, host: 8080
   config.vm.provision :shell, path: "../../shared/config.sh"
   config.vm.provision :shell, path: "../../shared/bootstrap.sh"
+  config.vm.provision :shell, path: "../../shared/php55.sh"
   config.vm.provision :shell, path: "../../shared/users.sh"
   config.vm.provision :shell, path: "../../shared/mariadb.sh"
   config.vm.provision :shell, path: "../../shared/dovecot.sh"
