--- a/setup/pear-horde-php54-5.2/Vagrantfile
+++ b/setup/pear-horde-php54-5.2/Vagrantfile
@@ -2,15 +2,12 @@
 # vi: set ft=ruby :
 
 VAGRANTFILE_API_VERSION = "2"
-
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-  config.vm.box = "ubuntu/trusty64"
+  config.vm.box = "ubuntu/precise64"
   config.vm.network "forwarded_port", guest: 80, host: 8080
-  #config.vm.network "public_network", ip: "192.168.1.51"
   config.vm.provision :shell, path: "../../shared/config.sh"
-  config.vm.provision :shell, path: "dev_config.sh"
   config.vm.provision :shell, path: "../../shared/bootstrap.sh"
-  config.vm.provision :shell, path: "../../shared/php55.sh"
+  config.vm.provision :shell, path: "../../shared/php54.sh"
   config.vm.provision :shell, path: "../../shared/users.sh"
   config.vm.provision :shell, path: "../../shared/mysql.sh"
   config.vm.provision :shell, path: "../../shared/dovecot.sh"
