--- a/setup/git-master-cyrus/Vagrantfile
+++ b/setup/git-master-cyrus/Vagrantfile
@@ -2,19 +2,35 @@
 # vi: set ft=ruby :
 
 VAGRANTFILE_API_VERSION = "2"
-
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "ubuntu/trusty64"
   #config.vm.network "forwarded_port", guest: 80, host: 8080
   config.vm.network "public_network", ip: "192.168.1.51"
-  config.vm.provision :shell, path: "../../shared/config.sh"
-  config.vm.provision :shell, path: "../../shared/php55.sh"
-  config.vm.provision :shell, path: "dev_config.sh"
-  config.vm.provision :shell, path: "../../shared/bootstrap.sh"
-  config.vm.provision :shell, path: "../../shared/mysql.sh"
-  config.vm.provision :shell, path: "../../shared/postfix_local.sh"
-  config.vm.provision :shell, path: "../../shared/cyrus.sh"
-  config.vm.provision :shell, path: "../../shared/cyrus_users.sh"
-
-  config.vm.provision :shell, path: "horde.sh"
+  config.vm.provision :shell,
+    path: "../../shared/config.sh",
+    name: "Configuring environment"
+  config.vm.provision :shell,
+    path: "dev_config.sh",
+    name: "Configuring development specific settings"
+  config.vm.provision :shell,
+    path: "../../shared/bootstrap.sh",
+    name: "Bootstrapping OS"
+  config.vm.provision :shell,
+    path: "../../shared/php54.sh",
+    name: "Configuring for PHP 5.4"
+  config.vm.provision :shell,
+    path: "../../shared/mysql.sh",
+    name: "Installing MySQL"
+  config.vm.provision :shell,
+    path: "../../shared/postfix_local.sh",
+    name: "Installing Postfix and configuring for local delivery only."
+  config.vm.provision :shell,
+    path: "../../shared/cyrus.sh",
+    name: "Installing Cyrus"
+  config.vm.provision :shell,
+    path: "../../shared/cyrus_users.sh",
+    name: "Creating Cyrus users"
+  config.vm.provision :shell,
+    path: "horde.sh",
+    name: "Installing Horde"
 end
