--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 .vagrant
+oracle-instantclient12.1-basic-12.1.0.2.0-1.x86_64.rpm
+oracle-instantclient12.1-devel-12.1.0.2.0-1.x86_64.rpm
+oracle-instantclient12.1-sqlplus-12.1.0.2.0-1.x86_64.rpm
