--- a/setup/pear-horde-5.2-production/Vagrantfile
+++ b/setup/pear-horde-5.2-production/Vagrantfile
@@ -5,6 +5,11 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "ubuntu/trusty64"
   #config.vm.network "forwarded_port", guest: 80, host: 8080
+
+  config.vm.provider "virtualbox" do |v|
+    v.memory = 1024
+  end
+
   config.vm.network "public_network", ip: "192.168.1.51"
   config.vm.provision "shell",
     path: "../../shared/bootstrap.sh",
