--- a/setup/git-master-cyrus/Vagrantfile
+++ b/setup/git-master-cyrus/Vagrantfile
@@ -4,8 +4,8 @@
 VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "ubuntu/trusty64"
-  #config.vm.network "forwarded_port", guest: 80, host: 8080
-  config.vm.network "public_network", ip: "192.168.1.51"
+  config.vm.network "forwarded_port", guest: 80, host: 8080
+  #config.vm.network "public_network", ip: "192.168.1.51"
   config.vm.provision :shell,
     path: "../../shared/config.sh",
     name: "Configuring environment"
@@ -16,8 +16,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     path: "../../shared/bootstrap.sh",
     name: "Bootstrapping OS"
   config.vm.provision :shell,
-    path: "../../shared/php/php54.sh",
-    name: "Configuring for PHP 5.4"
+    path: "../../shared/php/php56.sh",
+    name: "Configuring for PHP 5.6"
   config.vm.provision :shell,
     path: "../../shared/mysql/mysql.sh",
     name: "Installing MySQL"
