--- a/setup/pear-horde-cyrus-5.2/Vagrantfile
+++ b/setup/pear-horde-cyrus-5.2/Vagrantfile
@@ -5,6 +5,7 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "ubuntu/trusty64"
   config.vm.network "forwarded_port", guest: 80, host: 8080
+  #config.vm.network "public_network", ip: "192.168.1.51"
   config.vm.provision :shell,
     path: "../../shared/config.sh",
     name: "Configuring environment"
@@ -12,8 +13,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     path: "../../shared/bootstrap.sh",
     name: "Bootstrapping OS"
   config.vm.provision :shell,
-    path: "../../shared/php/php55.sh",
-    name: "Configuring for PHP 5.5"
+    path: "../../shared/php/php56.sh",
+    name: "Configuring for PHP 5.6"
   config.vm.provision :shell,
     path: "../../shared/mysql/mysql.sh",
     name: "Installing MySQL"
