Add vagrant image for testing a split checkout.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 oracle-instantclient12.1-basic-12.1.0.2.0-1.x86_64.rpm
 oracle-instantclient12.1-devel-12.1.0.2.0-1.x86_64.rpm
 oracle-instantclient12.1-sqlplus-12.1.0.2.0-1.x86_64.rpm
+setup/git-split-test/conf/git-tools-conf.php
