--- a/setup/git-split-test/Vagrantfile
+++ b/setup/git-split-test/Vagrantfile
@@ -13,6 +13,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     path: "../../shared/bootstrap.sh",
     name: "Bootstrapping OS"
   config.vm.provision :shell,
+    path: "../../shared/apache/apache.sh",
+    name: "Installing Apache"
+  config.vm.provision :shell,
     path: "../../shared/php/php7.sh",
     name: "Configuring for PHP 7"
   config.vm.provision :shell,
