--- a/setup/pear-horde-cyrus-5.2/Vagrantfile
+++ b/setup/pear-horde-cyrus-5.2/Vagrantfile
@@ -13,6 +13,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     path: "../../shared/bootstrap.sh",
     name: "Bootstrapping OS"
   config.vm.provision :shell,
+    path: "../../shared/apache/apache.sh",
+    name: "Installing Apache"
+  config.vm.provision :shell,
     path: "../../shared/php/php56.sh",
     name: "Configuring for PHP 5.6"
   config.vm.provision :shell,
