--- a/setup/pear-horde-php54-5.2/Vagrantfile
+++ b/setup/pear-horde-php54-5.2/Vagrantfile
@@ -15,6 +15,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     path: "../../shared/php/php54.sh",
     name: "Configuring for PHP 5.4"
   config.vm.provision :shell,
+    path: "../../shared/apache/apache.sh",
+    name: "Installing Apache"
+  config.vm.provision :shell,
     path: "../../shared/users.sh",
     name: "Adding users"
   config.vm.provision :shell,
