--- a/setup/git-tools-master/Vagrantfile
+++ b/setup/git-tools-master/Vagrantfile
@@ -4,7 +4,7 @@
 VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-  config.vm.box = "ubuntu/trusty64"
+  config.vm.box = "ubuntu/bionic64"
   config.vm.network "forwarded_port", guest: 80, host: 8080
   #config.vm.network "public_network", ip: "192.168.1.51"
   config.vm.provision :shell,
