--- a/setup/git-tools-stable/Vagrantfile
+++ b/setup/git-tools-stable/Vagrantfile
@@ -5,9 +5,9 @@ VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "ubuntu/bionic64"
-  # config.vm.network "forwarded_port", guest: 80, host: 8080
-  config.vm.network "public_network", ip: "192.168.1.55"
-  # config.vm.network "private_network", ip: "192.168.10.10"
+  config.vm.network "forwarded_port", guest: 80, host: 8080
+  #config.vm.network "public_network", ip: "192.168.1.55"
+  #config.vm.network "private_network", ip: "192.168.10.10"
   config.vm.hostname = "horde-master.local"
 
   if Vagrant.has_plugin?('vagrant_hostsupdater')
