--- a/setup/pear-horde-5.2-php56-oracle/Vagrantfile
+++ b/setup/pear-horde-5.2-php56-oracle/Vagrantfile
@@ -6,31 +6,40 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "ubuntu/trusty64"
   config.vm.network "forwarded_port", guest: 80, host: 8080
   #config.vm.network "public_network", ip: "192.168.1.51"
-  config.vm.provision :shell,
+  config.vm.provision "shell",
     path: "../../shared/config.sh",
     name: "Configuring environment"
-  config.vm.provision :shell,
+  config.vm.provision "shell",
+    path: "config.sh",
+    name: "Configuring environment"
+  config.vm.provision "shell",
     path: "../../shared/bootstrap.sh",
     name: "Bootstrapping OS"
   config.vm.provision :shell,
     path: "../../shared/apache/apache.sh",
     name: "Installing Apache"
-  config.vm.provision :shell,
+  config.vm.provision "shell",
     path: "../../shared/php/php56.sh",
     name: "Configuring for PHP 5.6"
+  config.vm.provision "shell",
+    path: "../../shared/users.sh",
+    name: "Adding users"
   config.vm.provision :shell,
-    path: "../../shared/mysql/mysql.sh",
-    name: "Installing MySQL"
-  config.vm.provision :shell,
+    path: "../../shared/oracle.sh",
+    name: "Installing Oracle"
+  config.vm.provision "shell",
+    path: "../../shared/dovecot/dovecot.sh",
+    name: "Installing Dovecot"
+  config.vm.provision "shell",
     path: "../../shared/postfix/postfix_local.sh",
     name: "Installing Postfix and configuring for local delivery only."
-  config.vm.provision :shell,
-    path: "../../shared/cyrus/cyrus.sh",
-    name: "Installing Cyrus"
-  config.vm.provision :shell,
-    path: "../../shared/cyrus/cyrus_users.sh",
-    name: "Creating Cyrus users"
-  config.vm.provision :shell,
+  config.vm.provision "shell",
+    path: "../../shared/postfix/procmail.sh",
+    name: "Installing Procmail"
+  config.vm.provision "shell",
+    path: "../../shared/vsftpd.sh",
+    name: "Installing vsftp"
+  config.vm.provision "shell",
     path: "horde.sh",
     name: "Installing Horde"
 end
