--- a/setup/pear-horde-5.2/Vagrantfile
+++ b/setup/pear-horde-5.2/Vagrantfile
@@ -3,20 +3,24 @@
 
 VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-  config.vm.box = "ubuntu/trusty64"
+  config.vm.box = "ubuntu/bionic64"
   config.vm.network "forwarded_port", guest: 80, host: 8080
+  # config.vm.network "public_network", ip: "192.168.1.51"
   config.vm.provision "shell",
     path: "../../shared/config.sh",
     name: "Configuring environment"
   config.vm.provision "shell",
+    path: "config.sh",
+    name: "Configuring local variables."
+  config.vm.provision "shell",
     path: "../../shared/bootstrap.sh",
     name: "Bootstrapping OS"
   config.vm.provision :shell,
-    path: "../../shared/apache/apache.sh",
-    name: "Installing Apache"
+    path: "../../shared/nginx/nginx.sh",
+    name: "Installing Nginx"
   config.vm.provision "shell",
-    path: "../../shared/php/php56.sh",
-    name: "Configuring for PHP 5.6"
+    path: "../../shared/php/php73-fpm.sh",
+    name: "Configuring for PHP 7.3 FPM"
   config.vm.provision "shell",
     path: "../../shared/users.sh",
     name: "Adding users"
